# src/main/java/io/idev/rimberry/entities/Product.java
@@ -1,0 +1,38 @@
+package io.idev.rimberry.entities;
+
+import java.util.Date;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.Table;
+
+import lombok.Data;
+
+@Data
+@Entity
+@Table(name = "PRODUCT")
+public class Product {
+
+	@Id
+	@Column(name = "PRODUCT_ID")
+	@GeneratedValue(strategy = GenerationType.SEQUENCE)
+	private int id;
+	
+	@Column(name = "PRODUCT_NAME")
+	private String name;
+	
+	@Column(name = "PRODUCT_TYPE")
+	private String type;
+	
+	@Column(name = "CREATED")
+	private Date created;
+	
+	@Column(name = "UPDATED")
+	private Date updated;
+	
+	@Column(name = "ISDELETED")
+	private boolean isDeleted;
+}
